--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/server.js",
   "engines":{
-    "node": "18.16.0"
+    "node": "20.x"
   },
   "cacheDirectories" : [
     "server/node_modules",
