--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
-  {
   "engines": {
-    "node": "20.0.0"
+    "node": "20.x"
   }
 },
   "cacheDirectories" : [
